# adsil-simulation

./: .clang-tidy  .dockerignore  .gitignore  .gitmodules  ADAPTER_TEST_COVERAGE_REPORT.md  CMakeLists.txt  CMakePresets.json  COVERAGE_SETUP.md  Dockerfile  PERFORMANCE_SUMMARY.md  README.md  README_WINDOWS.md  SIGNALSOLVER_REFACTORING_GUIDE.md  benchmark_results_20250731_120736.json  codecov.yml  run_adapter_tests.sh  test_coverage_locally.sh  update_coverage_readme.sh
apps/adsil_analyzer/: CMakeLists.txt  main.cpp  main.hpp
cmake/: CompilerWarnings.cmake  (+1 more)
modules/Adapter/: CMakeLists.txt
modules/Adapter/include/adapter/: AdapterManager.hpp  CarJsonAdapter.hpp  IJsonAdapter.hpp  IJsonAdapterBase.hpp  JsonAdapterRegistry.hpp  PointJsonAdapter.hpp  VectorJsonAdapter.hpp  adapter.hpp
modules/Adapter/include/adapter/implementations/: CarJsonAdapter.hpp  DeviceJsonAdapter.hpp  FrameJsonAdapter.hpp  PointJsonAdapter.hpp  SceneJsonAdapter.hpp  ShapeJsonAdapter.hpp  VectorJsonAdapter.hpp  implementations.hpp
modules/Adapter/include/adapter/interfaces/: IJsonAdapter.hpp
modules/Adapter/src/: AdapterManager.cpp  CarJsonAdapter.cpp  CarJsonAdapter.hpp.cpp  DeviceJsonAdapter.cpp  FrameJsonAdapter.cpp  PointJsonAdapter.cpp  SceneJsonAdapter.cpp  ShapeJsonAdapter.cpp  VectorJsonAdapter.cpp
modules/Adapter/tests/: AdapterManagerEnhancedTest.cpp  AdapterManagerTest.cpp  AdapterSystemIntegrationTest.cpp  CMakeLists.txt  CarJsonAdapterTest.cpp  DeviceJsonAdapterTest.cpp  JsonAdapterRegistryTest.cpp  PointJsonAdapterTest.cpp  PointVectorAdapterEnhancedTest.cpp  ShapeJsonAdapterTest.cpp  ShapeJsonAdapterTest.cpp.disabled  ShapeJsonAdapterTest_new.cpp  VectorJsonAdapterTest.cpp
modules/Core/: CMakeLists.txt
modules/Core/include/core/: Alias.hpp  Car.hpp  HasTransformNodeBase.hpp  Logger.hpp  Point.hpp  PointCloud.hpp  ResourceLocator.hpp  RotationUtils.hpp  Timer.hpp  Transform.hpp  TransformNode.hpp  Vector.hpp  core.hpp
modules/Core/include/core/configs/: CarConfig.hpp
modules/Core/include/core/interfaces/: IHasTransformNode.hpp
modules/Core/src/: Car.cpp  Point.cpp  PointCloud.cpp  ResourceLocator.cpp  RotationUtils.cpp  Transform.cpp  TransformNode.cpp  Vector.cpp
modules/Core/tests/: CMakeLists.txt
modules/Device/: CMakeLists.txt
modules/Device/include/device/: Device.hpp  DeviceConfig.hpp  DeviceFactory.hpp
modules/Device/src/: Device.cpp  DeviceFactory.cpp
modules/Geometry/: CMakeLists.txt
modules/Geometry/include/geometry/: Cube.hpp  Cylinder.hpp  CylinderConfig.hpp  IShape.hpp  geometry.hpp
modules/Geometry/include/geometry/configs/: CubeConfig.hpp  CylinderConfig.hpp  DeviceConfig.hpp
modules/Geometry/include/geometry/factories/: DeviceFactory.hpp  ShapeFactory.hpp
modules/Geometry/include/geometry/implementations/: Cube.hpp  Cylinder.hpp  Device.hpp  ShapeBase.hpp
modules/Geometry/include/geometry/interfaces/: IShape.hpp
modules/Geometry/src/: Cube.cpp  Cylinder.cpp  Device.cpp  DeviceFactory.cpp  ShaceFactory.cpp
modules/Geometry/tests/: CMakeLists.txt  CubeTest.cpp  CylinderTest.cpp  DeviceFactoryTest.cpp  DeviceTest.cpp  GeometryIntegrationTest.cpp  ShapeFactoryTest.cpp
modules/JsonUtils/: CMakeLists.txt
modules/JsonUtils/include/json/: JsonSerializable.hpp  JsonUtils.hpp
modules/JsonUtils/src/: JsonUtils.cpp
modules/Math/: CMakeLists.txt
modules/Math/include/math/: Constants.hpp  Logger.hpp  MathHelper.hpp  Point.hpp  PointCloud.hpp  RotationUtils.hpp  Vector.hpp  math.hpp
modules/Math/src/: Point.cpp  PointCloud.cpp  RotationUtils.cpp  Vector.cpp
modules/Math/tests/: CMakeLists.txt  ConstantsTest.cpp  MathHelperTest.cpp  MathIntegrationTest.cpp  PointCloudTest.cpp  PointTest.cpp  README.md  RotationUtilsTest.cpp  VectorTest.cpp  run_tests.sh
modules/Simulation/: CMakeLists.txt
modules/Simulation/include/simulation/: SignalSolver.hpp  SignalSolver2.hpp  SimulationScene.hpp  simulation.hpp
modules/Simulation/include/simulation/configs/: SimulationConfig.hpp
modules/Simulation/src/: FrameBufferManager.cpp  InputManager.cpp  PointCloudScene.cpp  SignalSolver.cpp  SignalSolver2.cpp  SimulationApp.cpp  SimulationManager.cpp  SimulationScene.cpp
modules/Simulation/src/configs/: SimulationConfig.cpp
modules/Simulation/tests/: CMakeLists.txt  FrameBufferManagerTest.cpp  IViewerTest.cpp  SignalSolverTest.cpp  SimulationConfigTest.cpp  SimulationManagerTest.cpp
modules/Spatial/: CMakeLists.txt
modules/Spatial/include/spatial/: spatial.hpp
modules/Spatial/src/: Transform.cpp  TransformNode.cpp
modules/Spatial/tests/: CMakeLists.txt  SpatialTest.cpp
modules/Utils/: CMakeLists.txt
modules/Utils/include/utils/: DataExporter.hpp  JsonFileUtils.hpp
modules/Utils/src/: DataExporter.cpp  JsonFileUtils.cpp
modules/Utils/tests/: CMakeLists.txt  README.md  UtilsEdgeCaseTest.cpp  UtilsTest.cpp
modules/Vehicle/: CMakeLists.txt
modules/Vehicle/include/vehicle/: Car.hpp
modules/Vehicle/src/: Car.cpp
modules/Vehicle/tests/: CMakeLists.txt  CarTest.cpp
modules/Viewer/: CMakeLists.txt
modules/Viewer/include/viewer/: AxisRenderable.hpp  DeviceRenderable.hpp  PointCloudRenderable.hpp  Renderable.hpp  WireframeRenderable.hpp  viewer.hpp
modules/Viewer/src/: AxisRenderable.cpp  Camera.cpp  CarInspectorPanel.cpp  CarRenderable.cpp  DeviceRenderable.cpp  FovPyramidRenderable.cpp  GroundRenderable.cpp  ImGuiLayer.cpp  InputManager.cpp  OpenGLViewer.cpp  PointCloudRenderable.cpp  Renderable.cpp  ShapeRenderable.cpp  ViewerInspectorPanel.cpp  WireframeRenderable.cpp
modules/Viewer/src/entitites/: AxisEntity.cpp  CarEntity.cpp  DeviceEntity.cpp  GroundEntity.cpp  PointCloudEntity.cpp  ShapeEntity.cpp
modules/Viewer/src/panels/: CarInspectorPanel.cpp  FrameManagerInspectorPanel.cpp  SelectedPointCloudInspectorPanel.cpp  ViewerInspectorPanel.cpp
modules/Viewer/src/renderables/: AxisRenderable.cpp  CarRenderable.cpp  DeviceRenderable.cpp  FovPyramidRenderable.cpp  GroundRenderable.cpp  PointCloudRenderable.cpp  Renderable.cpp  ShapeRenderable.cpp  WireframeRenderable.cpp
modules/Viewer/tests/: CMakeLists.txt
(+257 files in other folders)
